--- a/app/src/main/res/layout/activity_food_details.xml
+++ b/app/src/main/res/layout/activity_food_details.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rootView"
     android:background="@android:color/white"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="280dp"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -27,10 +28,8 @@
                 android:id="@+id/ivHeaderImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/item1"
+                android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
@@ -118,10 +117,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                tools:listitem="@layout/single_row_ingredient_list"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toBottomOf="@id/tvFoodDesc" />
+                app:layout_constraintTop_toBottomOf="@id/tvFoodDesc"
+                tools:listitem="@layout/single_row_ingredient_list" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/guideline2"
@@ -139,9 +138,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:onClick="toggleFavorite"
         android:src="@drawable/ic_favorite_border_white_24dp"
         app:fabSize="normal"
-        android:onClick="toggleFavorite"
         app:layout_anchor="@id/appBar"
         app:layout_anchorGravity="bottom|end" />
 
